--- a/package.json
+++ b/package.json
@@ -1,16 +1,14 @@
 {
   "name": "barcodeScanner",
   "version": "3.0.0",
-  "engines": {
-    "node": "4.1.1"
-  },
   "dependencies": {
     "babel-preset-react": "^6.24.1",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "is-url": "^1.2.2",
     "react": "^16.1.0",
     "react-dom": "^16.1.0",
-    "react-router-dom": "^4.2.2"
+    "react-router-dom": "^4.2.2",
+    "rimraf": "^2.6.2"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
@@ -36,6 +34,6 @@
   "scripts": {
     "start": "webpack-dev-server --config ./webpack.config.js",
     "deploy": "sh ./build/deploy.sh https://github.com/bibixx/wildwest-teleturniej.github.io/ master",
-    "build": "cross-env NODE_ENV=production webpack --config ./webpack.config.js"
+    "build": "rimraf ./dist/ && cross-env NODE_ENV=production webpack --config ./webpack.config.js"
   }
 }
