--- a/package.json
+++ b/package.json
@@ -1,39 +1,64 @@
 {
-  "name": "barcodeScanner",
-  "version": "3.0.0",
+  "name": "wildwest-teleturniej",
+  "private": true,
+  "scripts": {
+    "start": "webpack-dev-server --open --config ./build/webpack.dev.js",
+    "deploy": "sh ./build/deploy.sh https://github.com/bibixx/wildwest-teleturniej.github.io/ master",
+    "clean": "rimraf dist",
+    "build": "npm run clean && NODE_ENV=production webpack --config ./build/webpack.prod.js -p --progress"
+  },
   "dependencies": {
-    "babel-preset-react": "^6.24.1",
-    "friendly-errors-webpack-plugin": "^1.6.1",
-    "is-url": "^1.2.2",
+    "history": "^4.7.2",
     "react": "^16.1.0",
-    "react-dom": "^16.1.0",
-    "react-router-dom": "^4.2.2",
-    "rimraf": "^2.6.2"
+    "react-dom": "^16.1.0"
   },
   "devDependencies": {
-    "babel-core": "^6.26.0",
+    "autoprefixer": "^7.1.3",
+    "babel-core": "^6.25.0",
+    "babel-eslint": "^7.2.3",
     "babel-loader": "^7.1.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-react-jsx": "^6.24.1",
     "babel-preset-env": "^1.6.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-minify": "^0.2.0",
+    "babel-preset-preact": "^1.1.0",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
-    "copy-webpack-plugin": "^4.0.1",
-    "cross-env": "^5.0.1",
-    "css-loader": "^0.26.1",
-    "extract-text-webpack-plugin": "^2.1.0",
-    "html-webpack-plugin": "^2.24.1",
-    "image-webpack-loader": "^3.0.0",
-    "node-sass": "^3.13.0",
-    "sass-loader": "^4.0.2",
-    "style-loader": "^0.13.1",
-    "uglify-js": "^2.7.5",
-    "vinyl-source-stream": "^1.1.0",
-    "webpack": "2.2.0",
-    "webpack-dev-server": "2.2.0"
+    "copy-webpack-plugin": "^4.2.0",
+    "cross-env": "^5.1.1",
+    "css-loader": "^0.28.4",
+    "eslint-config-airbnb": "15.1.0",
+    "eslint-import-resolver-webpack": "^0.8.3",
+    "eslint-loader": "1.8.0",
+    "eslint-plugin-import": "2.7.0",
+    "eslint-plugin-jsx-a11y": "^6.0.2",
+    "eslint-plugin-react": "^7.3.0",
+    "eslint": "3.19.0",
+    "extract-text-webpack-plugin": "^3.0.0",
+    "file-loader": "^0.11.2",
+    "friendly-errors-webpack-plugin": "^1.6.1",
+    "html-webpack-plugin": "^2.29.0",
+    "node-sass": "^4.5.3",
+    "postcss-loader": "^2.0.6",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.18.2",
+    "stylelint-config-standard": "^17.0.0",
+    "stylelint-webpack-plugin": "^0.9.0",
+    "stylelint": "^8.1.1",
+    "uglifyjs-webpack-plugin": "^0.4.6",
+    "webpack": "^3.3.0",
+    "webpack-dev-server": "^2.5.1",
+    "webpack-monitor": "^1.0.13"
   },
-  "scripts": {
-    "start": "webpack-dev-server --config ./build/webpack.config.js",
-    "deploy": "sh ./build/deploy.sh https://github.com/bibixx/wildwest-teleturniej.github.io/ master",
-    "build": "rimraf ./dist/ && cross-env NODE_ENV=production webpack --config ./build/webpack.config.js"
+  "browserslist": {
+    "production": [
+      "last 2 version",
+      "ie 9"
+    ],
+    "development": [
+      "last 1 version"
+    ]
   }
 }
