--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "scripts": {
     "start": "webpack-dev-server --open --config ./build/webpack.dev.js",
-    "deploy": "sh ./build/deploy.sh https://github.com/bibixx/wildwest-teleturniej.github.io/ master",
+    "deploy": "sh ./build/deploy.sh https://github.com/wildwest-teleturniej/wildwest-teleturniej.github.io master",
     "clean": "rimraf dist",
     "build": "npm run clean && cross-env NODE_ENV=production webpack --config ./build/webpack.prod.js -p --progress"
   },
